@@ -1,0 +1,1 @@
+debian/set-default-soundcard.1
