@@ -1,4 +1,3 @@
-debian/tmp/usr/bin/aserver
 debian/tmp/usr/lib/libasound.so.2.0.0
 debian/tmp/usr/lib/libasound.so.2
 debian/tmp/usr/share/alsa
