@@ -4,6 +4,7 @@
 export DH_VERBOSE=1
 
 PACKAGE:= alsa-lib
+INSTALL_UAG := -o root -g audio
 include /usr/share/dpatch/dpatch.make
 
 export DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
@@ -53,10 +54,10 @@ install-arch: build-arch-stamp
 	dh_testroot
 	dh_clean -k
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/tmp
-#	install $(INSTALL_UAG) -m755 debian/set-default-soundcard \
-#		debian/libasound2-utils/usr/bin
 	dh_installdirs -a
 	dh_install -a
+	install $(INSTALL_UAG) -m755 debian/set-default-soundcard \
+		debian/libasound2-utils/usr/bin
 	dh_installdocs -a
 	dh_installexamples -a
 	dh_installchangelogs -a debian/ChangeLog
